[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/Reglo-Bold.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/app_menu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
use_filter = true
font_data = ExtResource( 1 )

[node name="AppMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 291.0
margin_top = 236.0
margin_right = 733.0
margin_bottom = 364.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 442.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 1 )
text = "Stars Without Number Sector Map"

[node name="SectorDataURLInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 442.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 2 )
placeholder_text = "Enter Sector Data URL..."

[node name="LoadSectorButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 442.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 3 )
text = "Load Sector"

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 442.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 4 )
text = "Hey"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/LoadSectorButton" to="." method="_on_LoadSectorButton_pressed"]
